--- a/desafio3-4-5-servidor/views/form.hbs
+++ b/desafio3-4-5-servidor/views/form.hbs
@@ -42,7 +42,7 @@
     } --}}
 </style>
 
-<a href="/api/productos" class="btn btn-outline-secondary linkButton">Ir a lista de productos</a>
+<a href="/api/productos" class="btn btn-outline-secondary linkButton">Lista de productos</a>
 
 <form action="/api/productos" method="POST">
     <fieldset class="fieldset">
