--- a/desafio3-4-5-servidor/public/template/productsList.hbs
+++ b/desafio3-4-5-servidor/public/template/productsList.hbs
@@ -1,13 +1,11 @@
-<a class="btn btn-outline-secondary linkButton" href="/">Agregar producto</a>
-
-<h1 style="margin: 20px 0px 30px 20px;">Lista de Productos </h1>
 
 {{#if haveProd }}
 
-<table class="table table-dark table-striped">
+<table class="table table-dark table-striped" style="margin-top: 80px ;">
     <thead>
         <tr>
             <th scope="col">#</th>
+            <th scope="col">Imagen </th>
             <th scope="col">Nombre </th>
             <th scope="col">Precio </th>
         </tr>
@@ -16,8 +14,9 @@
     <tbody>
         {{#each products}}
 
-        <tr>
+        <tr class="table-active">
             <th scope="row">1</th>
+            <td class="productIcon"> <img src="{{this.thumbnail}}" alt=""></td>
             <td> {{this.title}} </td>
             <td> {{this.price}} </td>
         </tr>
@@ -27,7 +26,7 @@
 
 {{else}} 
 
-<div class="alert alert-secondary" role="alert">
+<div class="alert alert-secondary" role="alert" style="margin-top: 80px;">
     No se encontraron Prodcutos
 </div>
 
